tests/enum/bad/arity.catala_en
```catala-metadata
declaration enumeration Bob:
  -- Zero
  -- One content integer
  -- Two content (money, integer)
  -- Three content (decimal, money, integer)

declaration scope S:
  internal param content Bob
  output o content integer
```

```catala
scope S:
  definition param equals Three content (12.12, $12.12, 12)
  definition o equals
    (match Present content (12, 13) with pattern
     -- Absent: 0
     -- Present content (a, b, c): a + b
    ) +
    (match Present content (12, 13, 14) with pattern
     -- Absent: 0
     -- Present content (a, b): a + b
    )
```

```catala-test-cli
$ catala test-scope S
┌─[ERROR]─ 1/2 ─
│
│  Error during typechecking, incompatible types:
│     (integer, integer)
│  // (integer, integer, <any type>)
│
│ While typechecking the following expression:
├─➤ tests/enum/bad/arity.catala_en:19.36-19.41:
│    │
│ 19 │      -- Present content (a, b, c): a + b
│    │                                    ‾‾‾‾‾
│
│ Type (integer, integer) is coming from:
├─➤ tests/enum/bad/arity.catala_en:17.28-17.36:
│    │
│ 17 │     (match Present content (12, 13) with pattern
│    │                            ‾‾‾‾‾‾‾‾
│
│ Type (integer, integer, <any type>) is coming from:
├─➤ tests/enum/bad/arity.catala_en:19.26-19.33:
│    │
│ 19 │      -- Present content (a, b, c): a + b
│    │                          ‾‾‾‾‾‾‾
└─
┌─[ERROR]─ 2/2 ─
│
│  Error during typechecking, incompatible types:
│     (integer, integer, integer)
│  // (integer, integer)
│
│ While typechecking the following expression:
├─➤ tests/enum/bad/arity.catala_en:23.33-23.38:
│    │
│ 23 │      -- Present content (a, b): a + b
│    │                                 ‾‾‾‾‾
│
│ Type (integer, integer, integer) is coming from:
├─➤ tests/enum/bad/arity.catala_en:21.28-21.40:
│    │
│ 21 │     (match Present content (12, 13, 14) with pattern
│    │                            ‾‾‾‾‾‾‾‾‾‾‾‾
│
│ Type (integer, integer) is coming from:
├─➤ tests/enum/bad/arity.catala_en:23.26-23.30:
│    │
│ 23 │      -- Present content (a, b): a + b
│    │                          ‾‾‾‾
└─
#return code 123#
```

```catala
scope S:
  exception definition o equals
    match param with pattern
    -- Zero: 0
    -- One content x: x
    -- Two content (a, x, y): integer of a + x
    -- Three content (a, b): integer of a + integer of b
```


```catala-test-cli
$ catala test-scope S
┌─[ERROR]─
│
│  This pattern has 3 arguments, while 2 are expected by constructor Two.
│
├─➤ tests/enum/bad/arity.catala_en:86.21-86.28:
│    │
│ 86 │     -- Two content (a, x, y): integer of a + x
│    │                     ‾‾‾‾‾‾‾
└─
#return code 123#
```
